src/compiler/tests/snapshots/test_output__Compiler vm code: src__compiler__tests__inputs__11__Pong__Main.jack@Main.jack.snap
---
source: src/compiler/tests/test_output.rs
expression: vm_code
input_file: src/compiler/tests/inputs/11/Pong/Main.jack

---
function Main.main 1
call PongGame.newInstance 0
pop temp 0
call PongGame.getInstance 0
pop local 0
push local 0
call PongGame.run 1
pop temp 0
push local 0
call PongGame.dispose 1
pop temp 0
push constant 0
return

