src/compiler/tests/snapshots/test_output__Compiler vm code: src__compiler__tests__inputs__11__Pong__PongGame.jack@PongGame.jack.snap
---
source: src/compiler/tests/test_output.rs
expression: vm_code
input_file: src/compiler/tests/inputs/11/Pong/PongGame.jack

---
function PongGame.new 0
push constant 7
call Memory.alloc 1
pop pointer 0
call Screen.clearScreen 0
pop temp 0
push constant 50
pop this 6
push constant 230
push constant 229
push this 6
push constant 7
call Bat.new 4
pop this 0
push constant 253
push constant 222
push constant 0
push constant 511
push constant 0
push constant 229
call Ball.new 6
pop this 1
push this 1
push constant 400
push constant 0
call Ball.setDestination 3
pop temp 0
push constant 0
push constant 238
push constant 511
push constant 240
call Screen.drawRectangle 4
pop temp 0
push constant 22
push constant 0
call Output.moveCursor 2
pop temp 0
push constant 8
call String.new 1
push constant 83
call String.appendChar 2
push constant 99
call String.appendChar 2
push constant 111
call String.appendChar 2
push constant 114
call String.appendChar 2
push constant 101
call String.appendChar 2
push constant 58
call String.appendChar 2
push constant 32
call String.appendChar 2
push constant 48
call String.appendChar 2
call Output.printString 1
pop temp 0
push constant 0
pop this 3
push constant 0
pop this 4
push constant 0
pop this 2
push constant 0
pop this 5
push pointer 0
return
function PongGame.dispose 0
push argument 0
pop pointer 0
push this 0
call Bat.dispose 1
pop temp 0
push this 1
call Ball.dispose 1
pop temp 0
push pointer 0
call Memory.deAlloc 1
pop temp 0
push constant 0
return
function PongGame.newInstance 0
call PongGame.new 0
pop static 0
push constant 0
return
function PongGame.getInstance 0
push static 0
return
function PongGame.run 1
push argument 0
pop pointer 0
label __VM_LABEL_1
push this 3
if-goto __VM_LABEL_2
label __VM_LABEL_3
push local 0
push constant 0
eq
push this 3
not
and
not
if-goto __VM_LABEL_4
call Keyboard.keyPressed 0
pop local 0
push this 0
call Bat.move 1
pop temp 0
push pointer 0
call PongGame.moveBall 1
pop temp 0
push constant 50
call Sys.wait 1
pop temp 0
goto __VM_LABEL_3
label __VM_LABEL_4
push local 0
push constant 130
eq
not
if-goto __VM_LABEL_6
push this 0
push constant 1
call Bat.setDirection 2
pop temp 0
goto __VM_LABEL_5
label __VM_LABEL_6
push local 0
push constant 132
eq
not
if-goto __VM_LABEL_8
push this 0
push constant 2
call Bat.setDirection 2
pop temp 0
goto __VM_LABEL_7
label __VM_LABEL_8
push local 0
push constant 140
eq
not
if-goto __VM_LABEL_9
push constant 0
not
pop this 3
goto __VM_LABEL_9
label __VM_LABEL_9
label __VM_LABEL_7
label __VM_LABEL_5
label __VM_LABEL_10
push local 0
push constant 0
eq
not
push this 3
not
and
not
if-goto __VM_LABEL_11
call Keyboard.keyPressed 0
pop local 0
push this 0
call Bat.move 1
pop temp 0
push pointer 0
call PongGame.moveBall 1
pop temp 0
push constant 50
call Sys.wait 1
pop temp 0
goto __VM_LABEL_10
label __VM_LABEL_11
goto __VM_LABEL_1
label __VM_LABEL_2
push this 3
not
if-goto __VM_LABEL_12
push constant 10
push constant 27
call Output.moveCursor 2
pop temp 0
push constant 9
call String.new 1
push constant 71
call String.appendChar 2
push constant 97
call String.appendChar 2
push constant 109
call String.appendChar 2
push constant 101
call String.appendChar 2
push constant 32
call String.appendChar 2
push constant 79
call String.appendChar 2
push constant 118
call String.appendChar 2
push constant 101
call String.appendChar 2
push constant 114
call String.appendChar 2
call Output.printString 1
pop temp 0
goto __VM_LABEL_12
label __VM_LABEL_12
push constant 0
return
function PongGame.moveBall 5
push argument 0
pop pointer 0
push this 1
call Ball.move 1
pop this 2
push this 2
push constant 0
gt
push this 2
push this 5
eq
not
and
not
if-goto __VM_LABEL_13
push this 2
pop this 5
push constant 0
pop local 0
push this 0
call Bat.getLeft 1
pop local 1
push this 0
call Bat.getRight 1
pop local 2
push this 1
call Ball.getLeft 1
pop local 3
push this 1
call Ball.getRight 1
pop local 4
push this 2
push constant 4
eq
not
if-goto __VM_LABEL_14
push local 1
push local 4
gt
push local 2
push local 3
lt
or
pop this 3
push this 3
if-goto __VM_LABEL_15
push local 4
push local 1
push constant 10
add
lt
not
if-goto __VM_LABEL_17
push constant 1
neg
pop local 0
goto __VM_LABEL_16
label __VM_LABEL_17
push local 3
push local 2
push constant 10
sub
gt
not
if-goto __VM_LABEL_18
push constant 1
pop local 0
goto __VM_LABEL_18
label __VM_LABEL_18
label __VM_LABEL_16
push this 6
push constant 2
sub
pop this 6
push this 0
push this 6
call Bat.setWidth 2
pop temp 0
push this 4
push constant 1
add
pop this 4
push constant 22
push constant 7
call Output.moveCursor 2
pop temp 0
push this 4
call Output.printInt 1
pop temp 0
goto __VM_LABEL_15
label __VM_LABEL_15
goto __VM_LABEL_14
label __VM_LABEL_14
push this 1
push local 0
call Ball.bounce 2
pop temp 0
goto __VM_LABEL_13
label __VM_LABEL_13
push constant 0
return

